--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "axios": "^0.19.0",
     "chalk": "^2.4.2",
     "clear": "^0.1.0",
+    "conf": "^6.0.1",
     "esm": "^3.2.25",
     "minimist": "^1.2.0",
     "ora": "^4.0.1"
